--- a/iidm-xml-import-export/pom.xml
+++ b/iidm-xml-import-export/pom.xml
@@ -52,7 +52,6 @@
             <artifactId>iidm-network-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -85,5 +84,11 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+		  <groupId>org.xmlunit</groupId>
+		  <artifactId>xmlunit-core</artifactId>
+		  <version>2.1.1</version>
+		   <scope>test</scope>
+		</dependency>
     </dependencies>
 </project>
