adds cmakefile for mcla module; fixes install.sh script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,8 +49,8 @@ endif()
 if(BUILD_MATLAB)
  message(STATUS "BUILD_MATLAB = " ${BUILD_MATLAB} ": Matlab based components will be compiled.")
  add_subdirectory(sampling)
+ add_subdirectory(mcla)
  add_subdirectory(dynamic-indexes)
- ##add_subdirectory(mcla) 
  if(BUILD_DYMOLA)
     message(STATUS "BUILD_DYMOLA = " ${BUILD_DYMOLA} ": matlab based dymola adapters will be compiled.")
     add_subdirectory(dymola-adapter)
