Remove date, horizon and forecastDistance from VoltageLevel and adapt merging module

--- a/ampl-export/pom.xml
+++ b/ampl-export/pom.xml
@@ -30,5 +30,10 @@
             <artifactId>iidm-import-export-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>network-merge</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
