--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,7 @@
         <poi.version>3.14</poi.version>
         <gson.version>2.6.2</gson.version>
         <jsonlib.version>2.4</jsonlib.version>
+        <xmlunit.version>2.1.1</xmlunit.version>
     </properties>
 
     <licenses>
@@ -470,6 +471,12 @@
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-all</artifactId>
                 <version>${mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.xmlunit</groupId>
+                <artifactId>xmlunit-core</artifactId>
+                <version>${xmlunit.version}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
