--- a/EU2Mod_MB/pom.xml
+++ b/EU2Mod_MB/pom.xml
@@ -18,5 +18,12 @@
     </parent>
 
     <artifactId>EU2Mod_MB</artifactId>
-
+    
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
