--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ set(BUILD_MATLAB false CACHE BOOL "")
 set(BUILD_EUROSTAG false CACHE BOOL "")
 set(BUILD_DYMOLA false CACHE BOOL "")
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
 set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++0x -fPIC")
@@ -19,17 +21,19 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=c++0x -fPIC")
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
 
+set(USE_STATIC_LIBS true CACHE BOOL "")
+set(Boost_USE_STATIC_LIBS ${USE_STATIC_LIBS})
+
 set(CMAKE_VERBOSE_MAKEFILE off)
 
-# thirdparty libraries location
-if (DEFINED thirdparty_prefix)
-    message("thirdparty_prefix=${thirdparty_prefix}")
+if (DEFINED thirdparty_prefix AND IS_DIRECTORY "${thirdparty_prefix}")
+    message(STATUS "Found thirdparty libraries: ${thirdparty_prefix}")
 else()
-    message(FATAL_ERROR "thirdparty_prefix is NOT defined")
+    message(FATAL_ERROR "Thirdparty libraries not found. The variable thirdparty_prefix is NOT set or is NOT a valid directory.")
 endif()
 set(PROTOBUF_HOME ${thirdparty_prefix}/protobuf)
 set(LIBARCHIVE_HOME ${thirdparty_prefix}/libarchive)
-set(BOOST_HOME ${thirdparty_prefix}/boost)
+set(BOOST_ROOT ${thirdparty_prefix}/boost)
 set(LOG4CPP_HOME ${thirdparty_prefix}/log4cpp)
 set(SZIP_HOME ${thirdparty_prefix}/szip)
 set(ZLIB_HOME ${thirdparty_prefix}/zlib)
@@ -39,32 +43,30 @@ set(MATIO_HOME ${thirdparty_prefix}/matio)
 add_subdirectory(mpi-communication)
 
 if(BUILD_EUROSTAG)
- message(STATUS "BUILD_EUROSTAG = " ${BUILD_EUROSTAG} ": eurostag-indexes and wp43adapter binaries will be compiled.")
- add_subdirectory(eurostag-indexes)
- add_subdirectory(wp43adapter)
+    message(STATUS "Eurostag based components (eurostag-indexes and wp43adapter) will be compiled.")
+    add_subdirectory(eurostag-indexes)
+    add_subdirectory(wp43adapter)
 else()
- message(STATUS "BUILD_EUROSTAG = " ${BUILD_EUROSTAG} ": eurostag-indexes and wp43adapter binaries will not be compiled.")
+    message(STATUS "Eurostag based components (eurostag-indexes and wp43adapter) will not be compiled.")
 endif()
 
 if(BUILD_MATLAB)
- message(STATUS "BUILD_MATLAB = " ${BUILD_MATLAB} ": Matlab based components will be compiled.")
- add_subdirectory(sampling)
- add_subdirectory(mcla)
- add_subdirectory(dynamic-indexes)
- if(BUILD_DYMOLA)
-    message(STATUS "BUILD_DYMOLA = " ${BUILD_DYMOLA} ": matlab based dymola adapters will be compiled.")
-    add_subdirectory(dymola-adapter)
- else()
-   message(STATUS "BUILD_DYMOLA = " ${BUILD_DYMOLA} ": matlab based dymola adapters will not be compiled.")
- endif()
+    message(STATUS "Matlab based components (sampling, mcla and dynamic-indexes) will be compiled.")
+    add_subdirectory(sampling)
+    add_subdirectory(mcla)
+    add_subdirectory(dynamic-indexes)
+    if(BUILD_DYMOLA)
+        message(STATUS "Dymola/Matlab based components (dymola-adapter) will be compiled.")
+        add_subdirectory(dymola-adapter)
+    else()
+        message(STATUS "Dymola/Matlab based components (dymola-adapter) will not be compiled.")
+    endif()
 else()
- message(STATUS "BUILD_MATLAB = " ${BUILD_MATLAB} ": Matlab based components will not be compiled.")
+    message(STATUS "Matlab based components (sampling, mcla and dynamic-indexes) will not be compiled.")
 endif()
 
 find_package(Doxygen)
-
 if(DOXYGEN_FOUND)
-
     set(doxyfile_in ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
     set(doxyfile ${CMAKE_BINARY_DIR}/Doxyfile)
 
