--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,7 @@
                     <useStandardDocletOptions>true</useStandardDocletOptions>
                     <excludePackageNames>cim1*</excludePackageNames>
                     <docfilessubdirs>true</docfilessubdirs>
+                    <aggregate>true</aggregate>
                 </configuration>
             </plugin>
             <plugin>
