--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,9 @@
         <module>distribution</module>
         <module>case-repository</module>
         <module>network-merge</module>
+        <!--
+        <module>histoDB</module>
+        -->
     </modules>
 
     <properties>
