--- a/iidm-import-export-api/pom.xml
+++ b/iidm-import-export-api/pom.xml
@@ -50,5 +50,9 @@
             <artifactId>computation-local</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+        </dependency>
     </dependencies>
 </project>
