--- a/iidm-import-export-api/pom.xml
+++ b/iidm-import-export-api/pom.xml
@@ -33,7 +33,12 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.shrinkwrap</groupId>
+            <artifactId>shrinkwrap-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.shrinkwrap</groupId>
             <artifactId>shrinkwrap-impl-base</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
