--- a/eurostag-step-up-transformer/pom.xml
+++ b/eurostag-step-up-transformer/pom.xml
@@ -51,7 +51,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>modules</artifactId>
+            <artifactId>loadflow-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
