--- a/ampl-export/pom.xml
+++ b/ampl-export/pom.xml
@@ -43,16 +43,19 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>eu.itesla_project</groupId>
             <artifactId>iidm-network-test</artifactId>
             <version>${project.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>eu.itesla_project</groupId>
             <artifactId>iidm-network-impl</artifactId>
             <version>${project.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
