Add utility classes to format tables (CSV, ASCII or AMPL)

--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -72,6 +72,15 @@
             <artifactId>auto-service</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.ow2.sirocco</groupId>
+            <artifactId>sirocco-text-table-formatter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>log4j-over-slf4j</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
