--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,7 @@
 /target/
 /ucte-import/target/
 /ucte-network/target/
-/ucte-util/target/
+/entsoe-util/target/
 /wca-integration/target/
 /case-repository/target/
 /network-merge/target/
