--- a/case-repository/pom.xml
+++ b/case-repository/pom.xml
@@ -36,7 +36,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>ucte-util</artifactId>
+            <artifactId>entsoe-util</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
