--- a/cim1-import/pom.xml
+++ b/cim1-import/pom.xml
@@ -52,7 +52,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>ucte-util</artifactId>
+            <artifactId>entsoe-util</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
