--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -69,6 +69,11 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>entsoe-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>network-merge</artifactId>
             <version>${project.version}</version>
         </dependency>
