Rename iidm-import-export-api to iidm-converter-api and rename iidm-xml-import-export to iidm-xml-converter

--- a/ampl-export/pom.xml
+++ b/ampl-export/pom.xml
@@ -27,7 +27,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>iidm-import-export-api</artifactId>
+            <artifactId>iidm-converter-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
