--- a/modelica-export/pom.xml
+++ b/modelica-export/pom.xml
@@ -68,7 +68,7 @@
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>iidm-import-export-api</artifactId>
+			<artifactId>iidm-converter-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
