--- a/online-mpi/pom.xml
+++ b/online-mpi/pom.xml
@@ -37,5 +37,10 @@
             <artifactId>computation-mpi</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>eu.itesla_project</groupId>
+            <artifactId>computation-mpi-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
