--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
         <module>ucte-import</module>
         <module>ucte-network</module>
         <module>wca-integration</module>
+        <module>computation-mpi-util</module>
     </modules>
 
     <properties>
