Fix parent pom.xml artifactId to avoid collision with ipst

--- a/computation-mpi/pom.xml
+++ b/computation-mpi/pom.xml
@@ -12,7 +12,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>eu.itesla_project</groupId>
-        <artifactId>itesla-parent</artifactId>
+        <artifactId>ipst</artifactId>
         <version>0.1-SNAPSHOT</version>
     </parent>
     <artifactId>computation-mpi</artifactId>
