--- a/computation/pom.xml
+++ b/computation/pom.xml
@@ -14,7 +14,7 @@
 
     <parent>
         <groupId>eu.itesla_project</groupId>
-        <artifactId>itesla-parent</artifactId>
+        <artifactId>ipst</artifactId>
         <version>0.1-SNAPSHOT</version>
     </parent>
 
