--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -14,7 +14,7 @@
 
     <parent>
         <groupId>eu.itesla_project</groupId>
-        <artifactId>itesla-parent</artifactId>
+        <artifactId>ipst</artifactId>
         <version>0.1-SNAPSHOT</version>
     </parent>
 
@@ -29,7 +29,11 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
-    
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>log4j-over-slf4j</artifactId>
+        </dependency>
     
         <!-- iPST core -->
         <dependency>
