--- a/case-repository/pom.xml
+++ b/case-repository/pom.xml
@@ -12,7 +12,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>eu.itesla_project</groupId>
-        <artifactId>ipst</artifactId>
+        <artifactId>ipst-core</artifactId>
         <version>0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
